--- a/design.css
+++ b/design.css
@@ -1,11 +1,11 @@
 /* CSS Document */
-
 html,body{
-	margin: 0px 0 0 0;
-	padding: 0 0 0 0;
+	margin: 0px 0px 0px 0px;
+	padding: 0px 0px 0px 0px;
 	height: 100%;
 	width:100%;
 	min-width:100%;
+	overflow:hidden;
 	
 }
 
@@ -62,7 +62,7 @@ ul.upmenuline li a {
 	overflow-y: scroll;
 	overflow-x: hidden;
 	min-width: 100%;
-	height: 80%;
+	height: 75%;
 	padding:0 0 0 0;
 	
 	
@@ -160,6 +160,14 @@ div.upmenu {
 	
 }
 
+div.smalllogo{
+	position: absolute;
+	left: 5px;
+	top: 5px;
+	
+	
+}
+
 div.main {
 	height: 100%;
 	width: 100%;
@@ -217,7 +225,6 @@ div.centerMenu {
 }
 div.centerMenu.form{
 	width : 100%;
-	
 
 	margin-left = 0px;
 	margin-top = 0px;
@@ -241,11 +248,39 @@ div.charspace {
 	 position: fixed;
 	 bottom: 0;
 	 right: 0;
-	 height: 256px;
+	 height: 512px;
 	 width: 256px;
-	 background-color: #999;
 	 border: 2px red;
 	 text-align: right;
+}
+div.charspace p.comments{
+	 position: absolute;
+	 height:100%;
+	 width:100%;
+	 top:-100px;
+	 left:-64px;
+	 
+	
+}
+div.charspace p.comments span{
+	 position: absolute;
+	 top:17px;
+	 left:30px;
+	 heigh: 200px;
+	text-align: left;
+	font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+	font-size: 16px;
+	color: #8E8E8E;
+	
+}
+div.charspace p.uketuske{
+	 position: absolute;
+	 height:100%;
+	 width:100%;
+	 top:50px;
+	 left:-128px;
+	 
+	
 }
 
 div.icon{
@@ -406,8 +441,10 @@ div.detailday{
 	
 }
 
-
-
+div.pages{
+	width: 100%;
+	height: 20px;
+}
 /* 以下form。書き込む場所のCSS */
 
 div.form{
@@ -532,4 +569,20 @@ div.sidebox img{
 	bottom:0;
 	
 	
+}
+
+p#comments{
+	opacity:0;	
+	
+}
+
+p#uketsuke{
+	opacity:0;
+	
+}
+
+footer{
+	background-color:#666;
+	height:2px;
+	width:100%;
 }
